[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/UI/ninepatch.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/main_menu/DBInitForm.gd" type="Script" id=2]
[ext_resource path="res://assets/styles/font_header.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.486275, 0.486275, 0.486275, 1 )
thickness = 2

[node name="DBInitForm" type="PanelContainer"]
margin_right = 389.0
margin_bottom = 363.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 389.0
margin_bottom = 363.0
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 389.0
margin_bottom = 363.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 373.0
margin_bottom = 347.0
custom_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 357.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Postgres Setup"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 357.0
margin_bottom = 233.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 357.0
margin_bottom = 24.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 168.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "IP Address"
align = 2

[node name="Address" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 357.0
margin_bottom = 63.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 168.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Port"
align = 2

[node name="Port" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 188.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5432"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 357.0
margin_bottom = 102.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 168.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Database Name"
align = 2

[node name="DatabaseName" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 188.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 357.0
margin_bottom = 141.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 168.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Username"
align = 2

[node name="Username" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 188.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 357.0
margin_bottom = 180.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5"]
margin_top = 5.0
margin_right = 168.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Password"
align = 2

[node name="Password" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5"]
margin_left = 188.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 357.0
margin_bottom = 262.0
custom_styles/separator = SubResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 357.0
margin_bottom = 321.0
custom_constants/separation = 25
alignment = 1

[node name="Initialize" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 237.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Connect"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Address" to="." method="_on_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Address" to="." method="_on_text_entered"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Port" to="." method="_on_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Port" to="." method="_on_text_entered"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/DatabaseName" to="." method="_on_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/DatabaseName" to="." method="_on_text_entered"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/Username" to="." method="_on_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/Username" to="." method="_on_text_entered"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5/Password" to="." method="_on_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer5/Password" to="." method="_on_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Initialize" to="." method="_on_Initialize_pressed"]
